--- a/auditor/Cargo.toml
+++ b/auditor/Cargo.toml
@@ -14,7 +14,7 @@ path = "src/main.rs"
 
 [dependencies]
 log = "*"
-sled = "*"
+rusqlite = { version = "*", feature = ["bundled"] }
 env_logger = "*"
 fs2 = "*"
 serde = "*"
